Bug 824920 - Fix zoom ratio and check the zoom offset to prevent over-scroll. r=drs